--- a/interior.html
+++ b/interior.html
@@ -65,5 +65,11 @@
                                 <a href="www.yahoomail.com/kolawole_adeyemo@yahoo.com" >Email us</a>
                             </div>
     </div>
+    <marquee> Your stylish seren is our pride </marquee>
+    <a href=" Home.html "> HOME  </a>
+    <a href=" About.html "> About </a>
+    <a href=" Service.html "> Service </a>
+    <a href=" Project.html "> Project </a>
+    <a href=" Contact.html "> Contact </a>
 </body>
 </html>
