--- a/interior.html
+++ b/interior.html
@@ -21,7 +21,7 @@
                                 <h2> About </h2>
                                 <p> We are Nigeria based decorative company, we have been in practice for over twenty years. <br> Our experience in imagination and creativity is second to non.</p>
                                 <p>we are located at 10, Ayokun street, Tinubu squre, lagos state.</p>   
-                                <img class="same" src="location.png" alt="company location on goggle map">
+                                <img id="same" src="location.png" alt="company location on goggle map">
                                 <p>You can also check on us via our social media page</p>
                                 <div class="app">
                                 <ul>
