--- a/interior.html
+++ b/interior.html
@@ -12,7 +12,7 @@
             <p> In this company we give you all you need to beautify your space at low cost budget with top-notch styling, that wow your vistors or clients.</p>
             <p> You can know more about us by sparing few minutes of your time in reading through our page.</p>
        <div>
-                            <h2> Home </h2>
+                            <h2 id="Home"> Home </h2>
                             <p>We design space to give comfort at affordable price</p>
                             <p>Creating a unique standard</p>
                             <p>At decorate us Nigeria, we create wide range of stylish interior <br> from high-end residential homes to boutique hotels to large corporate development <br>  based on your budget,we give you an amazing and trendy finishing <br> your space with bold touch of perfection.</p>
@@ -66,7 +66,7 @@
                             </div>
     </div>
     <marquee> Your stylish seren is our pride </marquee>
-    <a href=" Home.html "> HOME  </a>
+    <a href= "Home.html" > Home  </a>
     <a href=" About.html "> About </a>
     <a href=" Service.html "> Service </a>
     <a href=" Project.html "> Project </a>
