--- a/interior.html
+++ b/interior.html
@@ -12,13 +12,13 @@
             <p> In this company we give you all you need to beautify your space at low cost budget with top-notch styling, that wow your vistors or clients.</p>
             <p> You can know more about us by sparing few minutes of your time in reading through our page.</p>
        <div>
-                            <h3> Home </h3>
+                            <h3 id="Home"> Home </h3>
                             <p>We design space to give comfort at affordable price</p>
                             <p>Creating a unique standard</p>
                             <p>At decorate us Nigeria, we create wide range of stylish interior <br> from high-end residential homes to boutique hotels to large corporate development <br>  based on your budget,we give you an amazing and trendy finishing <br> your space with bold touch of perfection.</p>
           </div>
              <div>
-                                <h3> About </h3>
+                                <h3 id="About"> About </h3>
                                 <p> We are Nigeria based decorative company, we have been in practice for over twenty years. <br> Our experience in imagination and creativity is second to non.</p>
                                 <p>we are located at 10, Ayokun street, Tinubu squre, lagos state.</p>   
                                 <img class="same" src="location.png" alt="company location on goggle map">
@@ -34,7 +34,7 @@
                                 </ul>
                             </div>
                             <div>
-                                            <h3> Service </h3>
+                                            <h3 id="Service"> Service </h3>
                                             <p>Our service is based on the individual needs or want with any of our clients </p>
                                             <p> As an interior decoration company we give you everything you want and also give advice based on our experience in the industry.</p>
                                             <p> We go as far as design your</p>
@@ -46,7 +46,7 @@
                                    </ul>
                             </div>
                             <div>
-                                <h3> Projects </h3>
+                                <h3 id="Project"> Projects </h3>
                             <p> Here are some of our projects design for clients</p>
                      <ol>
                             <li> An arieal view of an office decoration</li>
@@ -60,16 +60,16 @@
                       </ol>
                             </div>
                             <div>
-                                <h3> Contact </h3>
+                                <h3 id="Contact"> Contact </h3>
                                 <p>Call 010decorateus</p>
                                 <a href="www.yahoomail.com/kolawole_adeyemo@yahoo.com" >Email us</a>
                             </div>
     </div>
     <marquee> Your stylish seren is our pride </marquee>
-    <a href=" Home.html "> HOME  </a>
-    <a href=" About.html "> About </a>
-    <a href=" Service.html "> Service </a>
-    <a href=" Project.html "> Project </a>
-    <a href=" Contact.html "> Contact </a>
+    <a href=" #Home"> HOME  </a>
+    <a href=" #About "> About </a>
+    <a href=" #Service "> Service </a>
+    <a href=" #Project "> Project </a>
+    <a href=" #Contact "> Contact </a>
 </body>
 </html>
