--- a/interior.html
+++ b/interior.html
@@ -65,7 +65,7 @@
                                 <a href="www.yahoomail.com/kolawole_adeyemo@yahoo.com" >Email us</a>
                             </div>
     </div>
-    <marquee> Your stylish seren is our pride </marquee>
+    <marquee> Within the thinkle of an eye, we will wow you </marquee>
     <a href=" #Home"> HOME  </a>
     <a href=" #About "> About </a>
     <a href=" #Service "> Service </a>
