add facebook app

--- a/interior.html
+++ b/interior.html
@@ -50,13 +50,13 @@
                             <p> Here are some of our projects design for clients</p>
                      <ol>
                             <li> An arieal view of an office decoration</li>
-                            <img class="same" src="Ariel view.jpg" alt="Ariel view.jpg">
+                            <img class="same" src="Ariel view.jpg" alt="Ariel view">
                             <li> Compound relaxation </li>
-                            <img class="same" src="compound relaxation.jpg"alt="compound relaxation.jpg">
+                            <img class="same" src="compound relaxation.jpg"alt="compound relaxation">
                             <li>Sitting room</li>
-                            <img class="same" src="Sitting room.jpg" alt="Sitting room.jpg">
+                            <img class="same" src="Sitting room.jpg" alt="Sitting room">
                             <li>Bedroom</li>
-                            <img class="same" src="Bedroom.jpg" alt="Bedroom.jpg">
+                            <img class="same" src="Bedroom.jpg" alt="Bedroom">
                       </ol>
                             </div>
                             <div>
